refactor(core): flatten public package, drop @SuppressWarnings("exports") (#57)
12 files move from conversion/ + mapping/ sub-packages into root io.github.eschizoid.telescope. Module-info exports drop from 4 to 2. Internal seams (Telescope.wrap, Mapper constructor, DeepMap.resolve) tighten to package-private since every caller is now same-package. The last seam (optic()) becomes opticOf(Telescope) returning Object — keeps Iso/Lens/Traversal out of public signatures; MetadataHolderProbe casts at the consume site.

Lattice mantra honored: users never see Iso, Lens, Prism, Affine, Traversal. Breaking import change for downstream consumers (Mapper FQN, Mapping FQN, etc.) — pre-1.0, no known adopters per YAGNI.

Also bundled:
- AdminTouchController + AdminTouchControllerTest in order-jpa exercise Telescope.fieldByName(String) as a runtime WRITE escape hatch (PLAN Tier 1 item 2). Companion to InspectController on the read side.
- 12 IDE-warning cleanups: type-param shadowing in Telescope#lensForAccessor, redundant casts in Reflective, args.getFirst() in BridgeProcessor, dropped unused params, redundant @SuppressWarnings, explicit type args.