@@ -70,7 +70,7 @@ class InvoiceBridgeFlowTest {
     assertThat(entity).isNotNull();
     assertThat(entity.getNumber()).isEqualTo("INV-200");
     assertThat(entity.getLines()).hasSize(2);
-    assertThat(entity.getLines().get(0).getSku()).isEqualTo("SKU-X");
+    assertThat(entity.getLines().getFirst().getSku()).isEqualTo("SKU-X");
     assertThat(entity.getLines().get(0).getQty()).isEqualTo(2);
     assertThat(entity.getLines().get(0).getUnitPrice()).isEqualByComparingTo("11.50");
     assertThat(entity.getLines().get(1).getSku()).isEqualTo("SKU-Y");
